# skidl-layout

./: .gitignore  AUTHORS.md  LICENSE  README.md  pyproject.toml
skidl_layout/: __init__.py  _worker_main.py  alpha_relax.py  backends.py  candidates.py  congestion.py  connector_metadata.py  constraints.py  context.py  decaps.py  engine.py  geometry.py  grid.py  hierarchy.py  intent.py  krt.py  metrics.py  orientation.py  parallel.py  placer.py  power.py  reader.py  refinement.py  report.py  roles.py  routability.py  scoring.py  snapshot.py  spatial.py  validator.py  writer.py
smoke/: smoke_end_to_end.py
tests/: conftest.py  layout_case_helpers.py  test_alpha_relax.py  test_krt_routability.py  test_layout_benchmark_cases.py  test_layout_candidate_setup.py  test_layout_candidates.py  test_layout_congestion.py  test_layout_constraints.py  test_layout_decaps.py  test_layout_default_parallel.py  test_layout_engine.py  test_layout_finalize.py  test_layout_geometry.py  test_layout_hierarchy.py  test_layout_intent.py  test_layout_metrics.py  test_layout_orientation.py  test_layout_parallel.py  test_layout_placer.py  test_layout_power.py  test_layout_reader.py  test_layout_real_pcb.py  test_layout_refinement.py  test_layout_report.py  test_layout_roles.py  test_layout_scoring.py  test_layout_snapshot.py  test_layout_validate_cache.py  test_layout_validator.py  test_layout_worker_main.py  test_layout_writer.py
