[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skidl-layout"
version = "0.1.0"
description = "PCB placement/layout engine for SKiDL circuits (code-only snapshot of lachlanfysh/skidl's layout package, packaged as a peer tool)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Lachlan Fysh" },
]
maintainers = [
    { name = "John Freudenthal", email = "john.freudenthal@gmail.com" },
]
keywords = ["kicad", "pcb", "layout", "placement", "skidl", "eda"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

# Required runtime deps. `skidl` supplies the Circuit/Part/Net loop-boundary
# objects and the two core symbols this package couples to (skidl.net.NCNet,
# skidl.node.HIER_SEP); simp_sexp is pulled in transitively by skidl but is
# named here because layout/{geometry,reader,writer}.py import it directly.
dependencies = [
    "skidl",
    "simp_sexp>=0.3.1",
]

[project.optional-dependencies]
# shapely gives an exact polygon-containment check in validator.py; without it
# the code falls back to a bounding-box test (see _shapely_outline_contains_bounds).
shapely = ["shapely"]
# test tooling
test = ["pytest"]

[project.urls]
"Source (snapshot origin)" = "https://github.com/lachlanfysh/skidl"

[tool.setuptools]
packages = ["skidl_layout"]

[tool.pytest.ini_options]
testpaths = ["tests"]
